pixel features (part of q1)

--- a/liblinear-1.5-dense/matlab/Makefile
+++ b/liblinear-1.5-dense/matlab/Makefile
@@ -1,6 +1,6 @@
 # This Makefile is used under Linux
 
-MATLABDIR ?= /usr/sww/pkg/matlab-r2008a
+MATLABDIR ?= /Applications/MATLAB_R2011b.app
 CXX ?= g++
 #CXX = g++-3.3
 CC ?= gcc
